@@ -1,5 +1,7 @@
 Deluge 0.9.05 - "1.0.0_RC5" (In Development)
-
+ Core:
+  * Fix deluged running with ssh X forwarding by removing the Gnome lib import
+  
 Deluge 0.9.04 - "1.0.0_RC4" (29 July 2008)
  Core:
   * Fix building with gcc 4.3
